--- a/app/globals.css
+++ b/app/globals.css
@@ -7,11 +7,8 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-poppins);
-  --font-inter: var(--font-inter);
-  --font-outfit: var(--font-outfit);
   --font-poppins: var(--font-poppins);
-  --font-urbanist: var(--font-urbanist);
-  --font-mono: var(--font-inter);
+  --font-mono: var(--font-poppins);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
